--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,36 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-  {% include head.html %}
+<head>
+    <link href="http://gmpg.org/xfn/11" rel="profile">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
-  <body>
+    <!-- Enable responsiveness on mobile devices-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
+    <title>
+        {{ page.title }}
+    </title>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="{{ site.baseurl }}css/main.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}css/sidebar.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}css/content.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}css/home-content.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
+
+    <!-- Icons -->
+    <link rel="shortcut icon" href="{{ site.baseurl }}image/check_filled.ico">
+
+</head>
+
+<body>
     {% include sidebar.html %}
 
-    <div class="content container">
-      {{ content }}
+    <div class="content">
+        {{ content }}
     </div>
+</body>
 
-  </body>
 </html>
