--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
 
     <div class="sidebar-title">
-        <h1><a href="{{ site.baseurl }}">{{ site.title }}</a></h1>
+        <h1><a href="{{ site.github.url }}">{{ site.title }}</a></h1>
     </div>
 
     <div class="sidebar-about">
@@ -15,35 +15,35 @@
                          then {{ page.url }} for about page will become {{ baseurl | append:'about/' }}
         {% endcomment %}
 
-        {% assign HomeUrl       = site.baseurl %}
-        {% assign ArchivesUrl   = site.baseurl | append:'archives/' %}
-        {% assign CategoriesUrl = site.baseurl | append:'categories/' %}
-        {% assign TagsUrl       = site.baseurl | append:'tags/' %}
-        {% assign AboutUrl      = site.baseurl | append:'about/' %}
-        <a class="sidebar-links-item {% if page.url == HomeUrl %}active{% endif %}"         href="{{ site.baseurl }}">Home</a>
-        <a class="sidebar-links-item {% if page.url == ArchivesUrl %}active{% endif %}"     href="{{ site.baseurl }}archives/">Archives</a>
-        <a class="sidebar-links-item {% if page.url == CategoriesUrl %}active{% endif %}"   href="{{ site.baseurl }}categories/">Categories</a>
-        <a class="sidebar-links-item {% if page.url == TagsUrl %}active{% endif %}"         href="{{ site.baseurl }}tags/">Tags</a>
-        <a class="sidebar-links-item {% if page.url == AboutUrl %}active{% endif %}"        href="{{ site.baseurl }}about/">About</a>
+        {% assign HomeUrl       = site.github.url %}
+        {% assign ArchivesUrl   = site.github.url | append:'archives/' %}
+        {% assign CategoriesUrl = site.github.url | append:'categories/' %}
+        {% assign TagsUrl       = site.github.url | append:'tags/' %}
+        {% assign AboutUrl      = site.github.url | append:'about/' %}
+        <a class="sidebar-links-item {% if page.url == HomeUrl %}active{% endif %}"         href="{{ site.github.url }}">Home</a>
+        <a class="sidebar-links-item {% if page.url == ArchivesUrl %}active{% endif %}"     href="{{ site.github.url }}archives/">Archives</a>
+        <a class="sidebar-links-item {% if page.url == CategoriesUrl %}active{% endif %}"   href="{{ site.github.url }}categories/">Categories</a>
+        <a class="sidebar-links-item {% if page.url == TagsUrl %}active{% endif %}"         href="{{ site.github.url }}tags/">Tags</a>
+        <a class="sidebar-links-item {% if page.url == AboutUrl %}active{% endif %}"        href="{{ site.github.url }}about/">About</a>
     </nav>
 
     <nav class="sidebar-icons">
 
         <a id="github-link"
             class="icon" title="Github" aria-label="Github"
-            href="{{ site.baseurl }}">
+            href="{{ site.github.url }}">
             {% include svg/github.svg %}
         </a>
 
         <a id="github-download-link"
             class="icon" title="Download" aria-label="Download"
-            href="{{ site.baseurl }}">
+            href="{{ site.github.url }}">
             {% include svg/download.svg %}
         </a>
 
         <a id="subscribe-link"
             class="icon" title="Subscribe" aria-label="Subscribe"
-            href="{{ site.baseurl }}">
+            href="{{ site.github.url }}">
             {% include svg/feed.svg %}
         </a>
 
@@ -63,21 +63,21 @@
         <a id="tags-link"
             class="icon {% if page.url == '/tags' %} active{% endif %}"
             title="Tags" aria-label="Tags"
-            href="{{ site.baseurl }}">
+            href="{{ site.github.url }}">
             {% include svg/tags.svg %}
         </a>
 
         <a id="search-link"
             class="icon {% if page.url == '/search' %} active{% endif %}"
             title="Search" aria-label="Search"
-            href="{{ site.baseurl }}search/">
+            href="{{ site.github.url }}search/">
             {% include svg/search.svg %}
         </a>
 
         <a id="search-link"
             class="icon {% if page.url == '/search' %} active{% endif %}"
             title="Search" aria-label="Search"
-            href="{{ site.baseurl }}search/">
+            href="{{ site.github.url }}search/">
             {% include svg/email.svg %}
         </a>
 
