--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,14 +14,14 @@
     </title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="{{ site.baseurl }}css/main.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}css/sidebar.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}css/content.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}css/home-content.css">
+    <link rel="stylesheet" href="{{ site.github.url }}css/main.css">
+    <link rel="stylesheet" href="{{ site.github.url }}css/sidebar.css">
+    <link rel="stylesheet" href="{{ site.github.url }}css/content.css">
+    <link rel="stylesheet" href="{{ site.github.url }}css/home-content.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
 
     <!-- Icons -->
-    <link rel="shortcut icon" href="{{ site.baseurl }}image/check_filled.ico">
+    <link rel="shortcut icon" href="{{ site.github.url }}image/check_filled.ico">
 
 </head>
 
