--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 {% comment %}
-<link rel="stylesheet" href="{{ site.github.url }}css/post.css">
+<link rel="stylesheet" href="{{ site.github.url }}/css/post.css">
 {% endcomment %}
 
 <div class="post">
