--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,15 +16,15 @@
         {% endcomment %}
 
         {% assign HomeUrl       = site.github.url %}
-        {% assign ArchivesUrl   = site.github.url | append:'archives/' %}
-        {% assign CategoriesUrl = site.github.url | append:'categories/' %}
-        {% assign TagsUrl       = site.github.url | append:'tags/' %}
-        {% assign AboutUrl      = site.github.url | append:'about/' %}
+        {% assign ArchivesUrl   = site.github.url | append:'/archives/' %}
+        {% assign CategoriesUrl = site.github.url | append:'/categories/' %}
+        {% assign TagsUrl       = site.github.url | append:'/tags/' %}
+        {% assign AboutUrl      = site.github.url | append:'/about/' %}
         <a class="sidebar-links-item {% if page.url == HomeUrl %}active{% endif %}"         href="{{ site.github.url }}">Home</a>
-        <a class="sidebar-links-item {% if page.url == ArchivesUrl %}active{% endif %}"     href="{{ site.github.url }}archives/">Archives</a>
-        <a class="sidebar-links-item {% if page.url == CategoriesUrl %}active{% endif %}"   href="{{ site.github.url }}categories/">Categories</a>
-        <a class="sidebar-links-item {% if page.url == TagsUrl %}active{% endif %}"         href="{{ site.github.url }}tags/">Tags</a>
-        <a class="sidebar-links-item {% if page.url == AboutUrl %}active{% endif %}"        href="{{ site.github.url }}about/">About</a>
+        <a class="sidebar-links-item {% if page.url == ArchivesUrl %}active{% endif %}"     href="{{ site.github.url }}/archives/">Archives</a>
+        <a class="sidebar-links-item {% if page.url == CategoriesUrl %}active{% endif %}"   href="{{ site.github.url }}/categories/">Categories</a>
+        <a class="sidebar-links-item {% if page.url == TagsUrl %}active{% endif %}"         href="{{ site.github.url }}/tags/">Tags</a>
+        <a class="sidebar-links-item {% if page.url == AboutUrl %}active{% endif %}"        href="{{ site.github.url }}/about/">About</a>
     </nav>
 
     <nav class="sidebar-icons">
@@ -70,14 +70,14 @@
         <a id="search-link"
             class="icon {% if page.url == '/search' %} active{% endif %}"
             title="Search" aria-label="Search"
-            href="{{ site.github.url }}search/">
+            href="{{ site.github.url }}/search/">
             {% include svg/search.svg %}
         </a>
 
         <a id="search-link"
             class="icon {% if page.url == '/search' %} active{% endif %}"
             title="Search" aria-label="Search"
-            href="{{ site.github.url }}search/">
+            href="{{ site.github.url }}/search/">
             {% include svg/email.svg %}
         </a>
 
