--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,14 +29,14 @@ layout: default
             {% if paginator.previous_page == 1 %}
                 <p><a class="newer-posts" href="{{ site.github.url }}">{% include svg/left-arrow.svg %}</a></p>
             {% else %}
-                <p><a class="newer-posts" href="{{ site.github.url }}page/{{ paginator.previous_page }}/">{% include svg/left-arrow.svg %}</a></p>
+                <p><a class="newer-posts" href="{{ site.github.url }}/page/{{ paginator.previous_page }}/">{% include svg/left-arrow.svg %}</a></p>
             {% endif %}
         {% endif %}
   
         <p><span class="page-number">Page {{paginator.page}} of {{paginator.total_pages}}</span></p>
   
         {% if paginator.next_page %}
-            <p><a class="older-posts" href="{{ site.github.url }}page/{{ paginator.next_page }}/">{% include svg/right-arrow.svg %}</a></p>
+            <p><a class="older-posts" href="{{ site.github.url }}/page/{{ paginator.next_page }}/">{% include svg/right-arrow.svg %}</a></p>
         {% endif %}
       </ul>
     </nav>
