--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="{{ site.github.url }}/css/sidebar.css">
     <link rel="stylesheet" href="{{ site.github.url }}/css/content.css">
     <link rel="stylesheet" href="{{ site.github.url }}/css/home-content.css">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
+    <link rel="stylesheet" href="{{ site.github.url }}/css/google-font-Abril_Fatface.css">
 
     <!-- Icons -->
     <link rel="shortcut icon" href="{{ site.github.url }}/image/check_filled.ico">
