try to repair active

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,19 +15,14 @@
                          then {{ page.url }} for about page will become {{ baseurl | append:'about/' }}
         {% endcomment %}
 
-        {% assign HomeUrl       = site.github.url %}
-        {% assign ArchivesUrl   = site.github.url | append:'/archives/' %}
-        {% assign CategoriesUrl = site.github.url | append:'/categories/' %}
-        {% assign TagsUrl       = site.github.url | append:'/tags/' %}
-        {% assign AboutUrl      = site.github.url | append:'/about/' %}
         {{ page.url }}
         <br/>
         {{ HomeUrl }}
-        <a class="sidebar-links-item {% if page.url == HomeUrl %}active{% endif %}"         href="{{ site.github.url }}">Home</a>
-        <a class="sidebar-links-item {% if page.url == ArchivesUrl %}active{% endif %}"     href="{{ site.github.url }}/archives/">Archives</a>
-        <a class="sidebar-links-item {% if page.url == CategoriesUrl %}active{% endif %}"   href="{{ site.github.url }}/categories/">Categories</a>
-        <a class="sidebar-links-item {% if page.url == TagsUrl %}active{% endif %}"         href="{{ site.github.url }}/tags/">Tags</a>
-        <a class="sidebar-links-item {% if page.url == AboutUrl %}active{% endif %}"        href="{{ site.github.url }}/about/">About</a>
+        <a class="sidebar-links-item {% if page.url == '/' %}active{% endif %}"         href="{{ site.github.url }}">Home</a>
+        <a class="sidebar-links-item {% if page.url == '/archives/' %}active{% endif %}"     href="{{ site.github.url }}/archives/">Archives</a>
+        <a class="sidebar-links-item {% if page.url == '/categories/' %}active{% endif %}"   href="{{ site.github.url }}/categories/">Categories</a>
+        <a class="sidebar-links-item {% if page.url == '/tags/' %}active{% endif %}"         href="{{ site.github.url }}/tags/">Tags</a>
+        <a class="sidebar-links-item {% if page.url == '/about/' %}active{% endif %}"        href="{{ site.github.url }}/about/">About</a>
     </nav>
 
     <nav class="sidebar-icons">
