--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,12 +2,26 @@
 layout: default
 ---
 
-{% comment %}
-<link rel="stylesheet" href="{{ site.github.url }}/css/post.css">
-{% endcomment %}
+<h1 class="post-page-title">{{ page.title }}</h1>
 
-<div class="post">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <span class="post-date">{{ page.date | date_to_string }}</span>
+<div class="post-page-time-tag">
+    <span class="post-page-time">
+        {% include svg/calendar_20.svg %}
+        {{ page.date | date: '%d %b %Y' }}
+    </span>
+
+    <span class="post-page-time-tag-break"></span>
+
+    {% if page.tags.size != 0 %}
+    <span class="post-page-tag">
+        {% include svg/tag_20.svg %}
+        {% for tag in page.tags %}
+            <a class="post-page-tag-link" href="{{ site.github.url }}/tags/#{{ tag }}">{{ tag }}</a>
+        {% endfor %}
+    </span>
+    {% endif %}
+</div>
+
+<div class="post-page-content">
     {{ content }}
 </div>
